*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-07 	Steven Yi	<stevenyi@csounds.com>
+	* Top/dl_opcodes.c (csoundOpenLibrary): Fixed to work with cygwin
+	* Top/thread.s : Fixed to work with cygwin
+
 2004-09-17  John ffitch  <jpff@codemist.co.uk>
 
 	* util2/exports/pv_export.c (main): Free malloced space
